--- a/src/css/variabel.css
+++ b/src/css/variabel.css
@@ -3,6 +3,7 @@
   --color-secondery: #9f6a33;
   --color-background: #f2f2f2;
   --color-text: #ffffff;
+  --color-button: #59160f;
 
   /* --------------------- */
   --spacing-small: 0.5rem;
